# CreaterOS

./: .gitignore  README.md
backend/: creator_server.py  pyproject.toml  test_creator.py
backend/data/: UrbanMeteorologicalData.csv  enterprise_policy.db  mcp_databases.json  telecom_propagation.db
backend/eval/: eval_dataset.json  run_eval.py
backend/knowledge_base/: vector_index.json
backend/knowledge_base/chroma_db/: chroma.sqlite3
backend/knowledge_base/docs/: 客服知识库-产品功能与使用指南.md  客服知识库-故障分级与SLA.md  客服知识库-数据隐私与合规.md  客服知识库-账户与安全规范.md  客服知识库-退款政策.md
backend/src/: agent.py  auth_store.py  config.py  data_manager.py  init_enterprise_policy_db.py  init_telecom_db.py  llm_factory.py  mcp_server.py  mcp_tools.py  rag_engine.py  reranker.py  runtime_context.py  server.py  tools.py
backend/src/graph/: __init__.py  builder.py  edges.py  nodes.py  state.py  supervisor.py
backend/src/graph/workers/: __init__.py  adapt_worker.py  base.py  chat_worker.py  discovery_worker.py  review_worker.py  script_worker.py
backend/src/hitl/: __init__.py  approvals.py  persistence.py
backend/src/memory/: __init__.py  long_term.py  manager.py  short_term.py
backend/src/observability/: __init__.py  console.py  langfuse.py  tracer.py
backend/src/prompts/: __init__.py
backend/src/prompts/backup_old/: __init__.py  rag_worker.py  router.py  text_to_sql.py  tool_worker.py
backend/src/rag/: __init__.py  chunking.py  indexing.py  query.py  reranker.py  retrieval.py
backend/tests/: test_e2e_harness.py  test_graph_topology.py
front1/: App-simple.tsx  App.tsx  index.css  (+6 more)
(+24 files in other folders)
